Added fix for #698. (#699)
Added armv7 qt and armhf qt installs

--- a/.github/workflows/pifile.yml
+++ b/.github/workflows/pifile.yml
@@ -62,7 +62,7 @@ jobs:
           - {
               name: "Debian Buster arm7",
               basefile: "updater/base_buster_arm7",
-              arch: "arm7",
+              arch: "arm7-pi2",
               osname: "buster",
               ostype: "Debian"
             }
